@@ -13,6 +13,7 @@
   has no reason to be in the HTML
 - spacer.png image was removed 'cause unused
 - loading.gif was moved from icons directory to theme directory
+- some new constants were added to customize theme colors
 
 3.0.0-rc4
 - a default submit button was added to P4A default HTML form
